# MidiTok

./: .gitignore  .pre-commit-config.yaml  .readthedoc.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py  test.py
.github/: codecov.yml
.github/workflows/: close-stale-issues.yml  docs.yml  lint.yml  publish-pypi.yml  pytest.yml  python-publish.yml
benchmarks/: README.md  __init__.py  utils.py
benchmarks/midi_file_read/: README.md  benchmark_midi_read.py  midi_read.csv  midi_read.md  midi_read.txt
benchmarks/miditok_preprocess_file/: README.md  benchmark_preprocess.py  preprocess.csv  preprocess.md  preprocess.txt
benchmarks/miditok_tokenize/: README.md  benchmark_tokenize.py  tokenize.csv  tokenize.md  tokenize.txt
benchmarks/tokenizer_training/: README.md  benchmark_training.py
benchmarks/tokenizer_training/results/: seq_split_bar_beats_lengths.csv  seq_split_bar_beats_lengths.md  seq_split_bar_beats_lengths.txt  seq_split_lengths.csv  seq_split_lengths.md  seq_split_lengths.txt  wordpiece_max_chars_enc_time.csv  wordpiece_max_chars_enc_time.md  wordpiece_max_chars_enc_time.txt  wordpiece_max_chars_train_time.csv  wordpiece_max_chars_train_time.md  wordpiece_max_chars_train_time.txt
colab-notebooks/: Example_HuggingFace_Mistral_Transformer.ipynb  Full_Example_HuggingFace_GPT2_Transformer.ipynb  GPT2_Transformer_Workflow.ipynb  MidiTok_Full_Workflow_Tutorial.ipynb  README.md
docs/: additional_tokens_table.csv  attribute_controls.rst  bases.rst  bpe.rst  citations.rst  conf.py  configuration.rst  data_augmentation.rst  examples.rst  hf_hub.rst  index.rst  language_models.rst  midi.rst  midi_tokenizer.rst  misc.rst  music_formats.rst  pytorch_data.rst  requirements.txt  sequential_models.rst  tokenizations.rst  tokenizers.rst  tokenizing_music_with_miditok.rst  train.rst  utils.rst
docs/assets/: miditok_logo.pxd  miditok_logo_stroke.pxd
miditok/: __init__.py  bpe.py  bpe_iterator.py  classes.py  constants.py  cp_word.py  hf_hub.py  hf_hub_subclass.py  midi_encoding_base.py  midi_like.py  midi_tokenizer.py  midi_tokenizer_base.py  mumidi.py  octuple.py  octuple_mono.py  remi.py  structured.py  tokenizer_training_iterator.py  tsd.py  utils.py  vocabulary.py
miditok/attribute_controls/: __init__.py  bar_attribute_controls.py  classes.py  track_attribute_controls.py
miditok/data_augmentation/: __init__.py  data_augmentation.py
miditok/pytorch_data/: __init__.py  collators.py  datasets.py  pytorch_data.py  split_midi_utils.py  split_utils.py
miditok/tokenizations/: __init__.py  cp_word.py  midi_like.py  mmm.py  mumidi.py  octuple.py  octuple_mono.py  pertok.py  remi.py  remi_plus.py  structured.py  tsd.py
miditok/utils/: __init__.py  split.py  split_utils.py  utils.py
src/miditok/: __init__.py  classes.py  constants.py  midi_tokenizer.py  tokenizer_training_iterator.py
src/miditok/attribute_controls/: __init__.py  classes.py  track_attribute_controls.py
src/miditok/data_augmentation/: __init__.py  data_augmentation.py
src/miditok/pytorch_data/: __init__.py  datasets.py
src/miditok/tokenizations/: __init__.py  cp_word.py  midi_like.py  mumidi.py  octuple.py  pertok.py  remi.py  structured.py  tsd.py
src/miditok/utils/: __init__.py  split.py  utils.py
tests/: __init__.py  benchmark_fast_bpe.py  benchmark_midi_read.py  benchmark_preprocess.py  benchmark_tokenize.py  conftest.py  one_track_tests.py  test_attribute_controls.py  test_bpe.py  test_bpe_slow.py  test_data_augmentation.py  test_hf_hub.py  test_io_formats.py  test_methods.py  test_multitrack.py  test_one_track.py  test_preprocess.py  test_pytorch_data_loading.py  test_saving_loading_config.py  test_tokenize.py  test_tokenize_multitrack.py  test_tokenize_one_track.py  test_toksequence.py  test_train.py  test_utils.py  tests.py  tests_bpe.py  tests_multitrack.py  tests_one_track.py  tests_utils.py  utils.py  utils_tests.py
tests/MIDIs_corrupted/: RunTimeError_unexpected_EOF.mid
tests/MIDIs_multitrack/: Funkytown.mid  Girls Just Want to Have Fun.mid  I Gotta Feeling.mid  In Too Deep.mid
tests/MIDIs_one_track/: 6338816_Etude No. 4.mid  Maestro_6.mid  Maestro_9.mid  POP909_008.mid  POP909_010.mid  POP909_191.mid  empty.mid
tests/Maestro_MIDIs/: 6354774_Macabre Waltz.mid  Maestro_10.mid  Maestro_2.mid  Maestro_3.mid  POP909_022.mid
tests/Multitrack_MIDIs/: Aicha.mid  Mr. Blue Sky.mid  Shut Up.mid  Starlight.mid  What a Fool Believes.mid
tests/One_track_MIDIs/: Maestro_4.mid  Maestro_5.mid  Maestro_7.mid  Maestro_8.mid
tests/abc_files/: a_morning_in_summer.abc  rising_sun.abc  the_rising_of_the_moon.abc  the_wheels_of_the_world.abc
tests/benchmarks/: benchmark_fast_bpe.py  benchmark_midi_read.py  benchmark_preprocess.py
