[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miditok"
version = "3.0.0"
description = "MIDI / symbolic music tokenizers for Deep Learning models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8.0"
authors = [
    { name = "Nathan Fradet" },
]
keywords = [
    "artificial intelligence",
    "deep learning",
    "transformer",
    "midi",
    "tokenization",
    "music",
    "mir",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19",
    "symusic>=0.2.3",
    "tqdm",
    "tokenizers>=0.13.0",
    "huggingface_hub>=0.16.4",
]

[project.optional-dependencies]
tests = [
    "pytest-cov",
    "pytest-xdist[psutil]",
    "torch",
    "tensorflow",
    "miditoolkit",
]

[project.urls]
Homepage = "https://github.com/Natooz/MidiTok"
Documentation = "https://miditok.readthedocs.io"

[tool.hatch.version]
path = "miditok/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/miditok",
]

[tool.ruff]
target-version = "py38"
extend-select = [
    "ARG",
    "A",
    # "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "E",
    "F",
    # "FBT",
    "FA",
    "G",
    "I",
    "INT",
    "N",
    "NPY",
    "PERF",
    "PTH",
    "PIE",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "UP",
    "W",
]
# COM812 yields errors for one-line portions without comma.
# Trailing commas are automatically set with ruff format anyway.
# This exclusion could be removed when this behavior is fixed in ruff.
ignore = ["COM812"]

[tool.ruff.per-file-ignores]
"tests/**" = [
    "S101",  # allow assertions in tests
    "T201",  # print allowed
]
